--- a/sass/components/_race-listing.sass
+++ b/sass/components/_race-listing.sass
@@ -68,12 +68,12 @@
     .listing-bottom
       margin: 0
     h3
-      +span-columns(8.75)
-      margin: 0
+      +span-columns(8.5)
+      margin-bottom: 0
       padding-bottom: .5rem
       font-size: 1.5em
     .top-rating
-      +span-columns(3.25)
+      +span-columns(3.5)
       padding: .2rem 0 .35rem
       text-align: right
       border-left: 1px solid $gray-darker
@@ -90,4 +90,5 @@
       font-size: .775em
       text-align: right
       a
+        width: auto
         padding: 0 0 0 1rem
